--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.BBL" >
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
@@ -20,13 +20,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.ImageDetailActivity">
+            android:name=".activities.ImageDetailTransitionIllustrateActivity">
         </activity>
         <activity
             android:name=".activities.RevealDetailLollipopActivity">
         </activity>
         <activity
             android:name=".activities.RevealDetailPreLollipopActivity">
+        </activity>
+        <activity
+            android:name=".activities.AppBarScrollActivity">
+        </activity>
+        <activity
+            android:name=".activities.ImageDetailCollapseToolBarIllustrateActivity">
         </activity>
     </application>
 
